deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pweb
  template:
    metadata:
      labels:
        app: pweb
    spec:
      containers:
        - name: pweb
          image: ryuxygm/pweb:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pweb-service
spec:
  type: ClusterIP
  selector:
    app: pweb
  ports:
    - port: 80
      targetPort: 80
