service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pweb-service
spec:
  selector:
    app: pweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
