ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pweb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - pweb.ryuapps.dev
      secretName: pweb-tls
  rules:
    - host: pweb.ryuapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pweb-service
                port:
                  number: 80
